--- a/src/assets/styles/hero/Sphere.module.css
+++ b/src/assets/styles/hero/Sphere.module.css
@@ -2,30 +2,35 @@
   height: 100%;
   display: flex;
   align-items: center;
+  position: relative;
+  z-index: 25;
 }
+
 .sphere {
   width: 400px;
   height: 400px;
   position: relative;
-  perspective: 800px;
   margin-top: 40vh;
   margin-right: 128px;
   margin-bottom: 64px;
+  transform-style: preserve-3d;
 }
 
 .container {
+  will-change: transform;
   width: 400px;
   height: 400px;
   transform-style: preserve-3d;
   animation : rotate 25s infinite linear;
+  background-color: transparent;
 }
 
 .item {
+  will-change: transform;
   display: inline-block;
   position: absolute;
-  top:50%;
-  left:50%;
-  perspective: 800px;
+  top: 50%;
+  left: 50%;
   transform-style: preserve-3d;
   transform: translate3d(0px, 0px, 0px);
   transition: transform 500ms;
@@ -42,7 +47,7 @@
 }
 
 .container .item.active:nth-child(1) {
-  transform: translate3d(-130px, 0px, -120px);
+  transform: translate3d(-130px, 0px, 10px);
 }
 
 
